--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,7 +7,7 @@ sites:
     url: https://community.wrk.com
 
 status-website:
-  cname: community.wrk.com
+  cname: status.wrk.com
   logoUrl: https://wrk.com/wp-content/themes/wundertheme2020/assets/img/logo.svg
   name: Wrk
   #introTitle: "**Wrk** is the open-source uptime monitor and status page, powered entirely by GitHub."
@@ -15,7 +15,7 @@ status-website:
   navbar:
     - title: Status
       href: /
-    - title: Wrk Community Portal
-      href: https://community.wrk.com/
+    #- title: Wrk Community Portal
+    #href: https://community.wrk.com/
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
