--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: status-page # The name of this repository
 
 sites:
   - name: Community
-    url: https://community.wrk.com/
+    url: https://community.wrk.com/health
     __dangerous__body_down: "Down"
     __dangerous__body_degraded: "Degraded"
 
