--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: wrktech # Your GitHub organization or username, where this repository lives
-repo: status-page # The name of this repository
+repo: status-page-skillpack # The name of this repository
 
 sites:
   - name: Community
