--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: wrktech # Your GitHub organization or username, where this repository liv
 repo: status-page-skillpack # The name of this repository
 
 sites:
-  - name: Community
+  - name: SkillPack
     url: https://portal.skillpack.io/health
     __dangerous__body_down: "Down"
     __dangerous__body_degraded: "Degraded"
